# sbot

./: .gitignore  CLAUDE.md  pyproject.toml  sbot.py
docs/plan/: backlog.md
docs/tech/nanobot/: README.md  architecture-overview.md  extension-guide.md  reverse-engineering-playbook.md  runtime-flows.md
docs/tech/openclaw/: long-term-memory.md  message-architecture.md  skills-and-tool-search.md
docs/tech/opencode/: mcp-server.md  overview.md  skills-commands.md
docs/tech/sbot/: auto-compact.md  (+3 more)
learn/: 01_why_async.ipynb  02_event_loop.ipynb  06_redis_streams_extension.ipynb  README.md  async-event-loop-summary.md
learn/01_concurrency_python/: 01_why_async.ipynb  03_asyncio_queue_producer_consumer.ipynb  04_create_task_background_work.ipynb  05_sbot_buffering_bug.ipynb  README.md
learn/02_mcp_protocol/: 01_json_rpc_basics.ipynb  02_stdio_transport.ipynb  03_mcp_server.ipynb  04_mcp_client.ipynb  05_real_mcp_sdk.ipynb  README.md
learn/python_concurrency_from_scratch/: README.md
lt-memory/: architecture.md  pitfalls.md
lt-memory/architecture/: decisions.md  flows.md  modules.md  overview.md
sample_code/nanobot/: README.md  pyproject.toml
sbot/: __init__.py  __main__.py  agent.py  app.py  bus.py  compact.py  config.py  session.py  skills.py  tools.py
sbot/channels/: __init__.py  base.py  cli.py  messenger.py  telegram.py
sbot/prompts/: system.txt
tests/: conftest.py  test_agent.py  test_bus.py  test_compact.py  test_session.py  test_skills.py  test_telegram.py  test_tools.py
tests/integration/: conftest.py  test_agent_flow.py
(+47 files in other folders)
