[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbot"
version = "0.1.0"
description = "Reimplementation of the nanobot AI assistant framework"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "loguru>=0.7",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
sbot = "sbot.cli.commands:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
